--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "uploadAll": "npx ts-node-esm runUploads.ts",
+    "uploadNetworks": "npx ts-node-esm runNetworkUploads.ts",
     "uploadTokens": "npx ts-node-esm runTokenUploads.ts"
   },
   "dependencies": {
